# anya

./: .env.example  .gitignore  README.md  __main__.py  pyproject.toml  requirements.txt  setup_queries.sql
.github/: dependabot.yml
.github/workflows/: main.yml  mypy.yml
assets/: banner.txt
commands/: configs.py  general.py  help.py  meta.py
components/: modals.py  paginators.py  views.py
core/: ansi_builder.py  bot.py  colors.py  consts.py  database.py  errors.py  exceptions.py  help.py  logging.py  objects.py  utils.py
database/: as_cards.py  as_cards_database.py  base_model.py  greetings.py  greetings_database.py  prefix_database.py  prefixes.py  rolepings.py  tags_database.py
docs/: CNAME  index.md  self_hosting.md  setups.md  shoob.md
extensions/: configs.py  general.py  help.py  shoob.py  spawns.py
handlers/: greetings_handler.py  image_handlers.py
kai/: __init__.py  handler.py  slash.py
listeners/: errors.py  greetings.py  greetings_listener.py  spawn_listener.py  spawn_listeners.py
plugins/: admin.py  confessions.py  configs.py  general.py  greetings.py  help.py  members.py  meta.py  shoob.py
