[tool.poetry]
name = "anya"
version = "0.1.0"
description = "A cool stoody bot for your discord servers."
authors = ["sarthhh <shiva02939@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
hikari = "^2.0.0.dev113"
asyncpg = "^0.27.0"
python-dotenv = "^0.21.0"
attrs = "^22.2.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
ruff = "^0.0.198"
isort = "^5.11.4"

[tool.ruff]
line-length = 120

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportPrivateUsage = false
reportImportCycles = false

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
line_length = 120
skip = "env"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
